Fix stepper clipping below 1280px: align modal right, give space to stepper
Modal aligns flex-end so stepper at left:-200px has room.
Modal width: calc(100vw - 210px) reserves space for stepper.

--- a/form-inscricao.css
+++ b/form-inscricao.css
@@ -683,8 +683,11 @@
 
 /* ---- ≤1280px: pull stepper closer ---- */
 @media (max-width: 1280px) {
+  .modal-overlay {
+    justify-content: flex-end;
+  }
   .modal {
-    max-width: 720px;
+    max-width: calc(100vw - 210px);
   }
   .form-stepper-wrap {
     left: -200px;
